--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Hello students!</h1>
+
+<p>This class is ending. Here are random words.</p>
+
+<p>Random laughing laugh laughed jumping jump jumped </p>
+
+<p>studying study studied</p>
+
