--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <h1>Hello students!</h1>
 
-<p>This class is ending. Here are random words.</p>
+<p>This class is ending. Here are words.</p>
 
 <p>Random laughing laugh laughed jumping jump jumped </p>
 
 <p>studying study studied</p>
 
+<p>links! <a href="github.com">link text</a> </p>
