--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 
 <p>studying study studied</p>
 
-<p>links! <a href="github.com">link text</a> </p>
+<p>links! <a href="page2.html">link text</a> </p>
