updated link info

--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 
 <p>studying study studied</p>
 
-<p>links! <a href="page2.html">link text</a> </p>
+<p>links! <a href="page2.html">Another page!</a> </p>
+
